[package]
name = "ddd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#reqwest = "0.11.13"
#axum = "*"
tower-http = {version = "0.5.2",features = ["tracing","timeout","cors"]}
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0.68"
tokio = { version = "1.23.0", features = ["full"] }
axum = { version = "0.7.5",features = ["http2"] }
#futures-util = "0.3.27"
#tracing = "0.1"
#tracing-subscriber = { version = "0.3", features = ["env-filter"] }
#actix = "0.13.0"
#rand = "0.8.5"
#rand_chacha = "0.3.1"
#lazy_static = "1.4.0"
#once_cell = "1.18.0"
#sled = "0.34.7"
#tokio = {version = "1.32.0",features = ["full"]}
#anyhow = "1.0.75"
#thiserror = "1.0.48"
#chrono = "0.4.30"
#tower = {version = "0.4.13",features = ["timeout"]}
#bytes = { version = "1.5.0" }
#rand = "0.8.5"
#parking_lot = "0.12.1"
#futures = "0.3.30"
#async-trait = "0.1.77"
#http = "1.1.0"
#num_enum = "0.7.2"
#serde_repr = "0.1.19"
pin-project-lite = "*"